force-app/main/default/objects/vlocity_ins__ContextAction__c/vlocity_ins__ContextAction__c.object-meta.xml
<CustomObject>
    <label>Context Action</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Context Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Context Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>