force-app/main/default/objects/vlocity_ins__ContextAction__c/fields/vlocity_ins__CustomImplementation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CustomImplementation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Custom Implementation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>