force-app/main/default/objects/vlocity_ins__ContextAction__c/fields/vlocity_ins__EffectiveFrom__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EffectiveFrom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>